--- a/css/style.css
+++ b/css/style.css
@@ -1,63 +1,79 @@
-* {
-    box-sizing: border-box;
+/* Global */
+
+#todo * {
     margin: 0;
     padding: 0;
-    font-family: Arial, Helvetica, sans-serif;
-    line-height: 1.5;
 }
 
-header {
+#todo header {
     background-color: #2c3e50;
-    color: #fff;
     display: flex;
-    justify-content: space-between;
+    position: sticky;
+    top: 0;
     align-items: center;
-    padding: 1rem;
+    justify-content: space-between;
+    padding: 1rem 1rem 1rem 1.75rem;
 }
 
-a {
-    color: #337ab7;
+#todo a {
     text-decoration: none;
 }
 
-a:hover {
-    color: #23527c;
-    text-decoration: underline;
+#todo header a {
+    color: #fff;
+    background-color: #416c97;
+    padding: .5rem 1rem;
+    border-radius: 20px;
+}
+
+#todo header a:hover {
+    background-color: #375a7c;
+}
+
+header li {
+    line-height: 0;
 }
 
 ul {
-    list-style: none;    
+    list-style: none;
 }
 
 nav ul {
     display: flex;
+    gap: 2rem;
 }
 
-nav li {
-    margin-right: 1rem;
+#todo header img {
+    max-width: 274px;
 }
 
-footer {
+#logo2 {
+    max-width: 100%;
+    display: none;
+}
+
+#todo footer {
     background-color: #2c3e50;
     color: #fff;
     text-align: center;
     padding: 1rem;
 }
 
-footer small {
-    display: block;
-    margin-top: 0.5rem;
-    margin-bottom: 0.5rem;
+#todo footer a {
+    display: inline-flex;
 }
 
+#todo footer a:hover {
+    text-decoration: underline;
+}
+
+/* Páginas "Inicio" y "Posts" */
+
 .hero {
-    height: 50vh;
+    height: 50svh;
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-.hero-content {
     text-align: center;
 }
 
@@ -65,106 +81,132 @@ footer small {
     text-align: center;
 }
 
-.text h2 {
-    padding: 1rem;
-}
-
-.text p {
-    padding-left: 1rem;
-    padding-right: 1rem;
-    text-align: justify;
-}
-
-.text p:last-of-type {
-    margin-bottom: 1rem;
-}
-
-.btn {
+#todo .button {
     display: inline-block;
-    padding: 0.5rem 1rem;
-    background-color: #2c3e50;
     color: #fff;
-    border: none;
-    border-radius: 5px;
-    text-decoration: none;
-    transition: background-color 0.3s ease;
+    background-color: #416c97;
+    padding: .5rem 1rem;
+    border-radius: 20px;
+    margin-top: 1rem;
 }
 
-.btn:hover {
-    color: #fff;
-    background-color: #34495e;
+#todo .button:hover {
+    background-color: #375a7c;
 }
 
-.featured-posts {
+#todo .featured-posts {
     background-color: #f2f2f2;
     padding: 2rem 0;
 }
 
-.posts-container {
+#todo .posts-container {
     max-width: 1200px;
-    margin: auto;
     display: flex;
-    flex-wrap: wrap;
+    margin: auto;
     justify-content: center;
-    align-items: stretch;
 }
 
-.post {
-    width: 30%;
-    margin: 1rem;
+#todo .post {
     background-color: #fff;
-    box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.2);
-    border-radius: 5px;
-    overflow: hidden;
-    transition: box-shadow 0.3s ease;
+    margin: 1rem;
+    width: 30%;
+    border-radius: 20px;
 }
 
-.post:hover {
-    box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.3);
-}
-
-.post h3 {
+#todo .post h3 {
     margin: 1rem;
     font-size: 1.5rem;
 }
 
 .post img {
     width: 100%;
-    height: auto;
+    border-radius: 20px 20px 0 0;
+    align-self: center;
 }
 
-.post p {
+#todo .post p {
     margin: 1rem;
 }
 
-form {
-    max-width: 600px;
-    margin: auto;
+#todo .post .date {
+    color: #aaa;
+    font-size: .9rem;
 }
 
-input[type="text"], input[type="email"], textarea {
+/* Páginas "Acerca de" y "Contacto" */
+
+#todo .text h2 {
+    padding: 1rem;
+}
+
+#todo .text p {
+    padding: 0 1rem 0 1rem;
+    text-align: justify;
+}
+
+#faq {
+    margin: 1rem;
+}
+
+#faq .accordion-button {
+    background-color: #416c97;
+}
+
+#faq .accordion-button:hover {
+    background-color: #375a7c;
+}
+
+#faq .accordion-body {
+    margin: 0 1rem 1rem;
+}
+
+#todo form {
+    max-width: 600px;
+    margin: 1rem auto 0;
+}
+
+#todo input[type="text"], #todo input[type="email"], #todo textarea {
     display: block;
     width: 100%;
-    padding: 0.5rem;
-    margin-bottom: 1rem;
+    padding: .5rem;
     border: 1px solid #ccc;
     border-radius: 5px;
-    font-size: 1rem;
 }
 
-button {
+#todo label {
+    margin-top: 1rem;
+}
+
+#todo textarea {
+    resize: none;
+}
+
+#todo button {
     display: block;
     margin: 1rem auto;
-    padding: 0.5rem 1rem;
+    padding: .5rem 1rem;
     border: none;
-    border-radius: 5px;
+    border-radius: 20px;
     background-color: #4caf50;
     color: #fff;
-    font-size: 1rem;
     font-weight: bold;
-    cursor: pointer;
 }
 
-button:hover {
+#todo button:hover {
     background-color: #3e8e41;
+}
+
+/* Modal */
+
+#leerMas .modal-header {
+    margin: 0 .5rem;
+}
+
+#leerMas .modal-body {
+    margin: .5rem;
+}
+
+#leerMas #asdBoton {
+    margin: 1rem 0;
+    background-color: transparent;
 }
