--- a/css/responsive.css
+++ b/css/responsive.css
@@ -20,3 +20,13 @@
         margin-top: 1rem;
     }
 }
+
+@media (max-width: 1024px) {
+    #todo .posts-container {
+        flex-wrap: wrap;
+    }
+
+    #todo .post {
+        min-width: 45%;
+    }
+}
